--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 <body>
     <div class="container">
         <form action="">
-            <div class="row mb-3 pt-3">
-                <label for="inputEmail3" class="col col-form-label">Email</label>
-                <div class="col-sm-10">
-                  <input type="email" class="form-control" id="inputEmail3">
+            <div class="input-cnt d-flex gap-4 align-items-center pt-3">
+                <label for="inputEmail3" class="">Email</label>
+                <div class="d-flex gap-2">
+                  <input type="email" class="form-control w-100" id="inputEmail3">
+                  <button id="bottone">conferma</button>
                 </div>
         </form>
+        <div id="inputNext">
+
+        </div>
     </div>
     <script src="js/script.js"></script>
 </body>
