esercizio ultimato (alla meno peggio)

--- a/index.html
+++ b/index.html
@@ -30,19 +30,22 @@
     <hr>
     <div id="dadiMalefici" class="">
         <h1 class="text-center">Gioca col destino</h1>
-        <div class="gameCont d-flex flex-column align-items-center">
+        <div class="gameCont d-flex gap-3 flex-column align-items-center">
             <div>
                 <button id="bottoneMagico">
                     Lancio!
                 </button>
             </div>
-            <div id="datiCont" class="d-flex">
+            <div id="datiCont" class="d-flex gap-3">
                 <div id="giocatore" class="caselle">
         
                 </div>
                 <div id="CPU" class="caselle">
         
                 </div>
+            </div>
+            <div id="verdetto">
+
             </div>
         </div>
     </div>
